Fix padding of main container view so content is not cut off

--- a/client/src/Components/_Nav.scss
+++ b/client/src/Components/_Nav.scss
@@ -84,6 +84,6 @@ nav {
   margin: 5px;
 }
 
-.navbar-image {
-  
+.main-window-space {
+  padding-top: 100px
 }
