--- a/client/src/styles/css/style.css
+++ b/client/src/styles/css/style.css
@@ -53,6 +53,9 @@ nav {
   font-size: 16px;
   margin: 5px; }
 
+.main-window-space {
+  padding-top: 100px; }
+
 .App {
   text-align: center; }
 
